# unimacro

./: .gitignore  BrowseGrammar.py  BrowseGrammarApp.py  COPYRIGHT.txt  D_.py  D_train.py  DialogServer.py  Packaging Python Projects — Python Packaging User Guide.url  README.md  TrainDialog.py  _clickbyvoice.py  _clickbyvoice.py~Branch_8cf32517  _control.py  _editcomments.py  _folders.py  _foldersnatlinktimer.py  _general.py  _lines.py  _number simple.py  _repeat.py  _shownumbersplus.py  _tasks.py  _testtrayicon.py  _unimacrotest.py  actions.py  autohotkeyactions.py  building_and_publishing_packages.txt  chrome_browsing.py  dos83.py  excel.py  firefox_browsing.py  foldersrememberdialog.py  frescobaldi.py  iban.py  listdialogs.py  lynote.py  messagefunctions.py  messagefunctions_old_winGuiAuto.py  monitorfunctions.py  namelist.py  (+19 more)
.github/workflows/: python-flit-publish.yml  python-flit-test-publish.yml  python-lint-test.yml  python-publish.yml
DisabledGrammars/: README.txt  REAME.txt  _brackets.py  _calculator.py  _editcomments.py  _keystrokes.py  _latex.py  _modes.py  _number extended.py  _number simple.py  _oops.py  _repeat.py  _setpriority.py  _shownumbersplus.py  _tags.py  _tasks.py  natspeak_sample_docstring.py  winword_styles_unimacro.py
UnimacroGrammars/: README.txt  _brackets.py  _clickbyvoice.py  _folders.py  _general.py  _keystrokes.py  _number extended.py  _repeat.py  _tags.py  winword_variable.py
actionclasses/: actionbases.py  excel-actions.py  frescobaldi-actions.py  komodo-actions.py  notreadykomodo-actions.py  pythonwin-actions.py  uedit32-actions.py  win32pad-actions.py
dlls/: README.txt
enabledictation/: _enabledictation.py
sample_ahk/: getintoforeground.ahk
sample_global_dictation/: _control.py  _dictationproject.py  _global_dictation.py
sample_global_dictation/enx_inifiles/: Template List.txt  _control.ini
sample_ini/: actions.ini  ita_spokenforms.ini
sample_ini/enx_inifiles/: _documentation.ini  _keystrokes.ini  _second_sample_docstring.ini  _shownumbersplus.ini  _unimacrosample_docstring.ini  chrome_browsing.ini  solitaire.ini
sample_ini/esp_inifiles/: firefox_browsing.ini
sample_ini/nld_inifiles/: _browser.ini  _commands.ini  _editcomments.ini  _number extended.ini  _number simple.ini  _repeat.ini  natspeak_dialog.ini
src/: natlinkutilsbj.py  spokenforms.py  windowinfo.py
src/Unimacro/: __init__.py  monitorfunctions.py  unimacrofoldersremembertemplate.py
src/Unimacro/DisabledGrammars/: _shownumbersplus.py
src/Unimacro/UnimacroGrammars/: _debug_natlink.py
src/Unimacro/actionclasses/: uedit32-actions.py
src/Unimacro/sample_ini/: enx_spokenforms.ini
src/Unimacro/unimacro_test/: unittestMonitorfunctions.py
src/Unimacro/website unimacro/: session import wxpython for 2.7.txt
src/UnimacroGrammars/: _general.py  _unimacrotest.py
src/actionclasses/: excel-actions.py  frescobaldi-actions.py
src/sample_global_dictation/config_scripts/: enable_natlink_kaiser.bat
src/sample_global_dictation/nld_inifiles/: _control.ini
src/sample_ini/: deu_spokenforms.ini
src/sample_ini/deu_inifiles/: _control.ini
src/sample_ini/enx_inifiles/: _browser.ini  _repeat.ini  _unimacrotest.ini
src/sample_ini/esp_inifiles/: _general.ini  _keystrokes.ini
src/sample_ini/nld_inifiles/: _general.ini  _latex.ini  _lines.ini  _number.ini  _oops.ini  _shownumbersplus.ini  _unittest.ini  chrome_browsing.ini
src/unimacro/: BrowseGrammar.py  BrowseGrammarApp.py  D_train.py  DialogServer.py  TrainDialog.py  __init__.py  __init__.py.orig  _control.py  _folders.py  _number simple.py  actions.py  autohotkeyactions.py  check_unimacro_grammars.py  foldersrememberdialog.py  listdialogs.py  lynote.py  messagefunctions.py  namelist.py  natlinkutilsbj.py  natlinkutilsqh.py  natspeak_dialog.py  peekable.py  pythonwin_dict.py  scintillacon.py  spokenforms.py  testDialogForDictationGrammar.py  unimacro_tracing.py  unimacroactions.py  unimacrofoldersremembertemplate.py  windowinfo.py  windowparameters.py  xxxxxxxpythonwin_dict.py  xxxxxxxunimacro_wxpythondialogs.py
src/unimacro/DisabledGrammars/: _editcomments.py  _first_sample_docstring.py  _modes.py  _number extended.py  _shownumbersplus.py  _tasks.py  firefox_browsing.py  natspeak_sample_docstring.py  winword_styles_unimacro.py
src/unimacro/OtherUnimacroGrammars/: _calculator.py  _keystrokes.py  _latex.py  _number extended.py  _oops.py  _repeat.py  _testtrayicon.py  _unimacrotest.py  excel.py  frescobaldi.py  solitaire.py  winword_variable.py  xxxxnatspeak_dialog.py
src/unimacro/UnimacroGrammars/: README.txt  (+27 more)
src/unimacro_test/: ActionsTest.py  SearchTest.py  print_hotspot.py  unittestClipboard.py  unittestProfileKaiserDictation.py
tests/: conftest.py  test_brackets.py  test_grammar_brackets.py  test_grammar_control.py  test_grammar_folders.py  test_grammar_general.py  test_grammar_lines.py  test_grammar_tasks.py  test_new_inifile_directory.py  test_spokenforms.py
tests/unimacro_test_natlink_config.natlink/: _natlink.ini  natlink.ini
unimacro_test/: ActionsTest.py  BasicTest.py  BringupTest.py  ClipboardTest.py  MessageTest.py  SearchTest.py  TestCaseWithHelpers.py  UnimacroTestHelpers.py  UtilsTest.py  _Unimacro_regression.vcl  unittestActions.py  unittestClipboard.py  unittestControl.py  unittestDocstringGrammar.py  unittestFolders.py  unittestIniGrammar.py  unittestLilypond.py  unittestMessagefunctions.py  unittestMonitorfunctions.py  unittestMouse.py  unittestNatlinkutilsqh.py  unittestNumbersConversion.py  unittestProfileKaiserDictation.py  unittestSpokenForms.py  util.py
unimacro_test/test_clipboardfiles/: natlink.docx  testlarge.txt  testsmall.txt
website dt/: .gitignore
website dt/html/: .htaccess  allinone.html  contact.html  dt.css  dt.js  index.html  sitemap.html
website dt/source/: .gitignore  9_contact.txt  dt.ini  index.txt
website unimacro/: demo youtube.txt
website unimacro/html/: .htaccess  allinone.html  index.html  robots.txt  sitemap.html
website unimacro/source/: index.txt  old html files.ini  sitemap.html  unimacro.css  unimacro.ini  unimacro.js  unimacro2.css
(+638 files in other folders)
