[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "unimacro"
authors = [{name = "Quintijn Hoogenboom (maintainer)", email = "q.hoogenboom@antenna.nl"}]
dynamic = ["description"]
version = "4.1.7.dev1"
requires-python = ">=3.10"
readme = "README.md"

#"dtactions = ^1.6.4" means anything >= 1.6.4.dev1 and less than 1.7.  A breaking change in dtactions 
#will mean an update the version specifier below.
#https://packaging.python.org/en/latest/specifications/version-specifiers/#id5
#note you have to put in .dev1 to take the earliest dev release.


dependencies = ["dtactions ~= 1.6.4.dev3",
        "debugpy >= 1.2.0",
		"pywin32 >= 304",
		"natlinkcore >= 5.4.1",
        "FreeSimpleGUI>=5.1.0"]
		  		
classifiers=[	"Development Status :: 2 - Pre-Alpha",
				"Topic :: Multimedia :: Sound/Audio :: Speech",
				"Topic :: Scientific/Engineering :: Human Machine Interfaces",
				"Environment :: Win32 (MS Windows)",
				"Intended Audience :: Developers",
				"Operating System :: Microsoft :: Windows",
				"Programming Language :: Python :: 3.9",
				"Programming Language :: Python :: 3.10",
				"Programming Language :: Python :: 3.11",
				"Programming Language :: Python :: Implementation :: CPython",
				"Topic :: Multimedia :: Sound/Audio :: Speech",
				"Topic :: Software Development :: Libraries :: Python Modules",
        ]
				
[project.optional-dependencies]
test = [
    "pytest >=7.1.2","flake8"
]
dev = [
	"pyenvutils","entry-point-inspector","build"
]
[project.entry-points."natlink.grammars"]
unimacro_builtins = "unimacro.UnimacroGrammars:locateme"

[project.entry-points."dt.loggers"]
	unimacro ="unimacro:logname"
	control="unimacro:control_logger_name"
	folders="unimacro:folders_logger_name"

[tool.pytest.ini_options]
minversion = "7.1.2"
addopts = "--capture=tee-sys "
# very important
#the pythonpath lets pytest load code in your source area
#in addition to that in site-packages etc.
#you may want to run your tests without install natlinkcore with flit or pip
pythonpath = [
]
testpaths= [
		"tests",
]
python_files = [
			"unittest*.py",
			"test_*.py",
	]
 
[project.scripts]

[project.urls]
homepage = "https://qh.antenna.nl/unimacro/"
repository="https://github.com/dictation-toolbox/unimacro"
source="https://github.com/dictation-toolbox/unimacro"		
